# Bootstrap

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS  Config.hpp.in  LICENSE-MIT  README.md  test.cannon  test.lsr
.github/workflows/: linux.yml  macosx.yml  macosx.yml.disabled  windows.yml  windows.yml.disabled
src/: ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  lex.cpp  lex.hpp  main.cpp  mode.hpp  parser.cpp  parser.hpp  program.cpp  program.hpp  semantic.cpp  semantic.hpp  token.cpp  token.hpp
